--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <link rel="icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>vue3.0</title>
+  <script type="text/javascript">
+    window._AMapSecurityConfig = {
+      securityJsCode: '2aa124a6032c2fdde8bccd36c25a52d2',
+    }
+  </script>
+  <script type="text/javascript"
+    src="https://webapi.amap.com/maps?v=1.4.15&key=616520c0be57cfeafc472cf64442ae71&plugin=AMap.Driving"></script>
 </head>
 
 <body>
